fixed the direct visit to article through URL - fixed the redirection of post editor - fixed styling to truncate description in home page carousel - added get by section id API - fixed the footer styling - fixed the hamburger menu items

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -246,10 +246,10 @@
   .footer-logo {
     justify-content: center;
   }
-
+/*
   .footer-social {
     align-items: center;
-  }
+  } */
 }
 
 /* Tablets (768px and below) - Centered Columns 2 & 3 */
@@ -298,9 +298,9 @@
     justify-content: center;
   }
 
-  .footer-social {
+  /* .footer-social {
     align-items: center;
-  }
+  } */
 
   .social-icon {
     justify-content: center;
